files serving through java controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.data.rest.base-path=/rest/
+
+local.files.dir=/village-tour/files/
