--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -23,6 +23,7 @@
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-dropdown": "0.0.21",
     "ngx-bootstrap": "^1.6.5",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
