fixed dropdown and work with files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.data.rest.base-path=/rest/
 
-local.files.dir=/village-tour/files/
+local.files.dir=D:\\village-tour\\files\\
