--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -25,8 +25,8 @@
     "jquery": "^3.2.1",
     "ng2-datepicker": "^1.8.3",
     "ng2-dropdown": "0.0.21",
+    "ng2-opd-popup": "^1.1.21",
     "ng2-overlay": "^0.7.2",
-    "ng2-popup": "^0.4.0",
     "ngx-bootstrap": "^1.6.5",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
