--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/village_tour?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:village_tour
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create
 
 spring.data.rest.base-path=/rest/
 
