add images and sql to fill database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/village_tour?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:h2:mem:village_tour
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.data.rest.base-path=/rest/
 
-local.files.dir=D:\\village-tour\\files\\
-#local.files.dir=/home/nkharab/pictures/files/
+local.files.dir=C:\\Users\\Nataliia\\IdeaProjects\\village-tour\\src\\main\\webapp\\src\\assets\\images\\
